# imagepipe

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: buffer.rs  color_conversions.rs  hasher.rs  lib.rs  opbasics.rs  pipeline.rs  scaling.rs
src/ops/: colorspaces.rs  curves.rs  demosaic.rs  gamma.rs  gofloat.rs  level.rs  mod.rs  rotatecrop.rs  transform.rs
tests/: maxsize_test.rs  roundtrip_test.rs
