[package]
name = "imagepipe"
version = "0.1.1"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "An image processing pipeline"
documentation = "https://docs.rs/imagepipe/"
#homepage = "..."
repository = "https://github.com/pedrocr/imagepipe"
license = "LGPL-3.0-only"
categories = ["multimedia::images"]

[dependencies]
time = "0.1"
lazy_static = "1"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
bincode = "1"
sha2 = "0.6"
multicache = "0.4"
image = "0.19"
rawloader = "0.35.1"

[profile.dev]
opt-level = 3
