[package]
name = "imagepipe"
version = "0.2.0"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "An image processing pipeline"
documentation = "https://docs.rs/imagepipe/"
#homepage = "..."
repository = "https://github.com/pedrocr/imagepipe"
license = "LGPL-3.0-only"
categories = ["multimedia::images"]

[dependencies]
time = "0.1"
lazy_static = "1"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
bincode = "1"
blake2 = "0.7"
image = "0.19"

[dependencies.rawloader]
version = "0.35.3"
path = "./rawloader"

[dependencies.multicache]
version = "0.5.0"
path = "./multicache"

[profile.dev]
opt-level = 3

[[bin]]
name = "converter"
doc = false
