[package]
name = "imagepipe"
version = "0.3.2"
authors = ["Pedro Côrte-Real <pedro@pedrocr.net>"]
description = "An image processing pipeline"
documentation = "https://docs.rs/imagepipe/"
#homepage = "..."
repository = "https://github.com/pedrocr/imagepipe"
license = "LGPL-3.0-only"
categories = ["multimedia::images"]
edition = "2018"

[dependencies]
time = "0.2"
lazy_static = "1"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
bincode = "1"
blake2 = "0.8"
image = "0.22"
log = "0.4"

[dependencies.rawloader]
version = "0.36.0"
path = "./rawloader"

[dependencies.multicache]
version = "0.6.0"
path = "./multicache"

[profile.dev]
opt-level = 3

[[bin]]
name = "converter"
doc = false
